[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Fonts/PixeloidSans-nR3g1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/TitleUberkid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/Title.gd" type="Script" id=3]
[ext_resource path="res://Materials/MenuFont.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Images/pico.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/darnell.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/moon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Audio/Sounds/snd_select.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Sounds/snd_deny.wav" type="AudioStream" id=9]
[ext_resource path="res://UI/OptionsMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Images/background.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/Images/grass.png" type="Texture" id=12]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -142 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.3 ),
"update": 0,
"values": [ Vector2( 0, -142 ), Vector2( 0.500004, -127.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.3 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.38043, 1.79577 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -213 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.3 ),
"update": 0,
"values": [ Vector2( 0, -213 ), Vector2( 1, -186.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.3 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 3.80435, 2.62676 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 0.3 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -17, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 0.3 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -300, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.75, 0.75 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 65
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Title" type="Node2D" groups=["menu"]]
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]

[node name="TempBackground" type="ColorRect" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0784314, 0.0705882, 0.243137, 1 )

[node name="TempFloor" type="ColorRect" parent="Background"]
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.12549, 0.443137, 0.0509804, 1 )

[node name="Background" type="Sprite" parent="Background"]
position = Vector2( 512, 300 )
texture = ExtResource( 11 )

[node name="Floor" type="Sprite" parent="Background"]
modulate = Color( 0, 0.458824, 1, 1 )
position = Vector2( 512, 500 )
texture = ExtResource( 12 )

[node name="Moon" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 98, 118 )
texture = ExtResource( 7 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Uberkid" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 88, 470 )
scale = Vector2( 1.3, 1.3 )

[node name="Uberkid2" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 296, 418 )
scale = Vector2( 0.6, 0.6 )

[node name="Uberkid3" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 509, 447 )
scale = Vector2( 1.3, 1.3 )

[node name="Uberkid4" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 794, 418 )
scale = Vector2( 0.6, 0.6 )

[node name="Uberkid10" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 654, 426 )
scale = Vector2( 0.8, 0.8 )

[node name="Uberkid5" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 873, 442 )
scale = Vector2( 1.1, 1.1 )

[node name="Uberkid6" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 1008, 421 )
scale = Vector2( 0.9, 0.9 )

[node name="Uberkid7" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 737, 469 )
scale = Vector2( 1.4, 1.4 )

[node name="Uberkid8" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 937, 494 )
scale = Vector2( 1.5, 1.5 )

[node name="Darnell" type="Node2D" parent="Sprites"]
position = Vector2( 366, 487 )
scale = Vector2( 1.1, 1.1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Sprites/Darnell"]
margin_left = -48.0
margin_top = -17.0
margin_right = 51.0
margin_bottom = 11.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Sprite" type="Sprite" parent="Sprites/Darnell"]
modulate = Color( 0.615686, 0.788235, 1, 1 )
position = Vector2( 0, -142 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites/Darnell" groups=["title_animator"]]
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="Pico" type="Node2D" parent="Sprites"]
position = Vector2( 227, 544 )

[node name="ColorRect" type="ColorRect" parent="Sprites/Pico"]
margin_left = -78.0
margin_top = -36.0
margin_right = 84.0
margin_bottom = 15.0
color = Color( 0, 0, 0, 0.470588 )

[node name="Sprite" type="Sprite" parent="Sprites/Pico"]
modulate = Color( 0.784314, 0.886275, 1, 1 )
position = Vector2( 0, -213 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites/Pico" groups=["title_animator"]]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
offset = Vector2( 512, 300 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D" groups=["title_animator"]]
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="Sounds" type="Node" parent="."]

[node name="HoverSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="DenySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Overlay"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.847059 )

[node name="Title" type="Label" parent="Overlay"]
anchor_right = 1.0
margin_left = 512.0
margin_right = -1.0
margin_bottom = 256.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
text = "PICO
REVOLUTIONS"
align = 1
valign = 1

[node name="Version" type="Label" parent="Overlay"]
anchor_right = 1.0
margin_left = 984.0
margin_top = 576.0
margin_right = -3.0
margin_bottom = 596.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 7 )
text = "v1.1"
align = 1
valign = 1

[node name="MainMenu" type="VBoxContainer" parent="Overlay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -8.0
margin_bottom = 300.0
theme = ExtResource( 4 )
custom_constants/separation = 10

[node name="Start" type="Button" parent="Overlay/MainMenu" groups=["button"]]
margin_right = 512.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="Options" type="Button" parent="Overlay/MainMenu" groups=["button"]]
margin_top = 72.0
margin_right = 512.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"

[node name="Quit" type="Button" parent="Overlay/MainMenu" groups=["button"]]
margin_top = 144.0
margin_right = 512.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="OptionsMenu" parent="Overlay" instance=ExtResource( 10 )]
visible = false
margin_left = 512.0
margin_top = 199.0
margin_right = 1024.0

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
